Fix listing page alignment with fixed-width date column
Changed date column from fit-content(8em) to fixed 8em width to ensure
perfect alignment of post titles regardless of date length variations in
proportional fonts.

--- a/quartz/components/styles/listPage.scss
+++ b/quartz/components/styles/listPage.scss
@@ -11,7 +11,7 @@ li.section-li {
 
   & > .section {
     display: grid;
-    grid-template-columns: fit-content(8em) 1fr;
+    grid-template-columns: 8em 1fr;
 
     & > .desc > h3 > a {
       background-color: transparent;
@@ -26,5 +26,5 @@ li.section-li {
 
 // modifications in popover context
 .popover .section {
-  grid-template-columns: fit-content(8em) 1fr !important;
+  grid-template-columns: 8em 1fr !important;
 }
